--- a/public/our-services.html
+++ b/public/our-services.html
@@ -39,8 +39,8 @@
     
     <ul>
       <li><a  href="/">Home</a></li>
-      <li><a href="/our-services.html">Services</a></li>
-      <li><a class="active" href="/contact-us.html">Contact</a></li>
+      <li><a class="active" href="/our-services.html">Services</a></li>
+      <li><a  href="/contact-us.html">Contact</a></li>
       
     </ul>
     <br/>
